--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 appnope=0.1.0=py37_0
 backcall=0.1.0=py37_0
 blas=1.0=mkl
-bleach=3.1.0=py37_0
+bleach=3.1.1
 ca-certificates=2019.1.23=0
 certifi=2018.11.29=py37_0
 cycler=0.10.0=py37_0
